--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-	"name": "Python 3",
+	"name": "Building Neo4j Applications with Python course",
 	"image": "mcr.microsoft.com/devcontainers/python:1-3.12-bullseye",
 	"postCreateCommand": "bash .devcontainer/post_create.sh",
 	"portsAttributes": {
