--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,9 @@ FLASK_APP=api
 FLASK_DEBUG=true
 FLASK_RUN_PORT=3000
 
-NEO4J_URI=neo4j://localhost:7687
+NEO4J_URI=neo4j://3.235.44.197:7687
 NEO4J_USERNAME=neo4j
-NEO4J_PASSWORD=neo
+NEO4J_PASSWORD=spot-selector-injections
 
 JWT_SECRET=secret
 SALT_ROUNDS=10
